<resources>
    <string name="app_name">CurrencyCalculator</string>
    <string name="convert">Convert</string>
    <string name="history">History</string>
    <string name="day">Day:</string>
    <string name="changeDay">Change day</string>
    <string name="originCurrency">Origin currency</string>
    <string name="toCurrency">To currency</string>
    <string name="amountEmpty">0</string>
    <string name="valueAmountTitle">Amount</string>
    <string name="calendarTitle">Amount</string>
    <string name="error_message_internet">There seems to be an internet connection issue. Please confirm you are connected to data or wifi and try again.</string>
    <string name="retry">Retry</string>
</resources>