<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:textSize="@dimen/reduced_medium_text_size"
                android:text="@string/error_message_internet" />

            <Button
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/message"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/retry" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/retryButton"
                android:background="@color/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:background="@color/darkGrey_31">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

       <TextView
           android:id="@+id/dayTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/medium_text_size"
           android:textColor="@color/text"
           android:text="@string/day"
           app:layout_constraintTop_toBottomOf="@id/errorBanner"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="@dimen/margin"
           android:layout_marginTop="@dimen/margin" />

        <TextView
            android:id="@+id/dayValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="@color/text"
            tools:text="20.11.2022"
            app:layout_constraintTop_toTopOf="@id/dayTitle"
            app:layout_constraintBottom_toBottomOf="@id/dayTitle"
            app:layout_constraintStart_toEndOf="@id/dayTitle"
            app:layout_constraintEnd_toStartOf="@id/changeDay"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_half" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeDay"
            app:layout_constraintTop_toTopOf="@id/dayTitle"
            app:layout_constraintBottom_toBottomOf="@id/dayTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/originCurrencyContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/originCurrency"
            app:layout_constraintTop_toBottomOf="@id/dayTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/originCurrencyAmount"
            android:layout_margin="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/originCurrencyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/originCurrencyAmount"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amountEmpty"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/originCurrencyContainer"
            app:layout_constraintBottom_toBottomOf="@id/originCurrencyContainer"
            android:layout_marginEnd="@dimen/margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toCurrencyContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/toCurrency"
            app:layout_constraintTop_toBottomOf="@id/originCurrencyContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/toCurrencyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            app:layout_constraintTop_toBottomOf="@id/toCurrencyContainer"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin" />

        <TextView
            android:id="@+id/valueAmountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/text"
            android:text="@string/valueAmountTitle"
            app:layout_constraintTop_toBottomOf="@id/convert"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin" />

        <TextView
            android:id="@+id/valueAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="@color/text"
            tools:text="100.34"
            app:layout_constraintTop_toTopOf="@id/valueAmountTitle"
            app:layout_constraintBottom_toBottomOf="@id/valueAmountTitle"
            app:layout_constraintStart_toEndOf="@id/valueAmountTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_half" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>